// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: Input[site/pages/components/Input/example-01-base.js] 1`] = `
<label>
  <input />
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-02-size.js] 1`] = `
<div>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
</div>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-03-number.js] 1`] = `
<div>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
  <label>
    <input />
  </label>
</div>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-04-number.js] 1`] = `
<label>
  <input />
  <a>
    <svg>
      <path />
      <path />
    </svg>
  </a>
  <a>
    <svg>
      <path />
      <path />
    </svg>
  </a>
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-05-group.js] 1`] = `
<div>
  <div>
    <i />
    <label>
      <input />
    </label>
    <span>
      -
    </span>
    <label>
      <input />
    </label>
  </div>
  <div>
    <label>
      <input />
    </label>
    <button>
      <i />
    </button>
  </div>
  <div>
    <label>
      <input />
    </label>
    <label>
      <input />
    </label>
  </div>
  <div>
    <label>
      <input />
    </label>
    <button>
      <span>
        Search
      </span>
    </button>
  </div>
  <div>
    <b>
      <i />
    </b>
    <label>
      <input />
    </label>
    <b>
      .com
    </b>
  </div>
</div>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-06-tip.js] 1`] = `
<div>
  <label>
    <input />
  </label>
  <div>
    <i />
    <label>
      <input />
    </label>
  </div>
  <div>
    <i />
    <label>
      <input />
    </label>
  </div>
</div>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-07-validate.js] 1`] = `
<label>
  <input />
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-08-disabled.js] 1`] = `
<div>
  <div>
    <label>
      <input />
    </label>
    <span>
      -
    </span>
    <label>
      <input />
    </label>
  </div>
  <label>
    <input />
  </label>
</div>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-09-password.js] 1`] = `
<label>
  <input />
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-1-clearable.js] 1`] = `
<label>
  <input />
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-1-underline.js] 1`] = `
<label>
  <input />
</label>
`;

exports[`Snapshot test: Input[site/pages/components/Input/example-10-innertitle.js] 1`] = `
Array [
  <label
    className="so-input"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    <div
      className="so-input-title-box"
    >
      <div
        className="so-input-title-box-title so-input-title-box-top"
      >
        input something
      </div>
      <div
        className="so-input-title-box-content"
      >
        <input
          className="so-input-title-box-hidable"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="so-input-title-box-place"
      >
        <div
          className="so-input-title-box-title"
        >
          input something
        </div>
      </div>
    </div>
  </label>,
  <div
    className="so-input so-input-group so-button-group so-button-from-input-group"
    style={
      Object {
        "marginTop": 12,
        "width": undefined,
      }
    }
  >
    <label
      className="so-input"
      style={
        Object {
          "width": undefined,
        }
      }
    >
      <div
        className="so-input-title-box"
      >
        <div
          className="so-input-title-box-title so-input-title-box-top"
        >
          please input your email
        </div>
        <div
          className="so-input-title-box-content"
        >
          <input
            className="so-input-title-box-hidable"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="so-input-title-box-place"
        >
          <div
            className="so-input-title-box-title"
          >
            please input your email
          </div>
        </div>
      </div>
    </label>
    <b
      onBlur={[Function]}
      onFocus={[Function]}
    >
      .com
    </b>
  </div>,
]
`;
